--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.12'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.4.0.2513"
         classpath 'org.jacoco:org.jacoco.core:0.8.7'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:3.0.2'
     }
 }
 
@@ -26,15 +27,15 @@ task clean(type: Delete) {
 }
 
 sonarqube {
+    def sonarLogin = System.getenv("SONAR_LOGIN") as String ?: ""
     properties {
         property "sonar.projectName", "jacocoandsonar"
         property "sonar.sourceEncoding", "UTF-8"
         property "sonar.sources", "src/main/java"
         property "sonar.projectKey", "jacocoandsonar"
         property "sonar.host.url", "http://localhost:9000"
-        property "sonar.login", "sqp_1786a9e269d1af33fa209ae23a613ce09acd4d19"
+        property "sonar.login", sonarLogin // Value to run locally "sqp_1786a9e269d1af33fa209ae23a613ce09acd4d19"
         property "sonar.tests", ["src/test/java", "src/test/kotlin"]
-//        property "sonar.jacoco.reportPaths", "${project.buildDir}/temporario/testDebugUnitTest.exec"
         property 'sonar.coverage.jacoco.xmlReportPaths', "${projectDir}/build/reports/jacoco/allDebugCoverage/allDebugCoverage.xml"
     }
 }
